# kvp-store

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: kvp_store.proto
src/: client.rs  main.rs  server.rs
