[package]
name = "key-value-pair-store-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.31.0"
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }

[[bin]]
name = "server"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"


[build-dependencies]
tonic-build = "0.11.0"
